--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Chasing Dot</title>
   <style>
     body {
@@ -12,146 +12,142 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      padding: 20px;
+      margin: 0;
     }
     h1 {
-      font-size: 2rem;
+      margin-top: 30px;
     }
     #info {
-      margin: 10px 0;
+      margin-top: 10px;
+      font-size: 1.2rem;
     }
     #grid {
       display: grid;
       grid-template-columns: repeat(3, 100px);
       grid-template-rows: repeat(3, 100px);
-      gap: 10px;
+      gap: 12px;
+      margin: 30px 0;
     }
     .cell {
       width: 100px;
       height: 100px;
-      background: #2b2b2b;
-      border-radius: 10px;
+      background: #2c2c2c;
+      border-radius: 12px;
       display: flex;
-      align-items: center;
       justify-content: center;
+      align-items: center;
       cursor: pointer;
+      transition: background 0.3s;
     }
     .dot {
       width: 40px;
       height: 40px;
-      background: #ff4668;
+      background: radial-gradient(circle at top left, #ff5f6d, #d1345b);
       border-radius: 50%;
     }
-    #game-over {
-      display: none;
-      background: rgba(0,0,0,0.8);
-      padding: 20px;
-      border-radius: 10px;
-      text-align: center;
-      margin-top: 20px;
-    }
-    #bottom-ad {
-      position: fixed;
-      bottom: 0;
-      width: 100%;
-      background: #000;
-      text-align: center;
-      padding: 10px;
-      z-index: 99;
-    }
     #pauseBtn {
-  position: absolute;
-  top: 10px;
-  right: 10px;
-  background: #444;
-  color: white;
-  border: none;
-  padding: 8px 12px;
-  border-radius: 4px;
-  cursor: pointer;
-}
+      position: absolute;
+      top: 10px;
+      right: 10px;
+      padding: 8px 12px;
+      background: #333;
+      border: none;
+      border-radius: 4px;
+      color: white;
+      cursor: pointer;
+    }
+    #gameOver {
+      display: none;
+      font-size: 1.2rem;
+      margin-top: 20px;
+      color: #ff6666;
+    }
+    #download {
+      background: #2d87f0;
+      color: white;
+      padding: 8px 14px;
+      border: none;
+      border-radius: 6px;
+      margin-top: 20px;
+      cursor: pointer;
+    }
+    #ad-box {
+      margin-top: 40px;
+    }
   </style>
 </head>
 <body>
   <h1>🎯 Chasing Dot</h1>
   <div id="info">
-    ⏱ Time: <span id="time">0</span>s | 💯 Score: <span id="score">0</span> | 🏅 High Score: <span id="highscore">0</span> | ❤️ Lives: <span id="lives">3</span>
+    ⏱ Time: <span id="time">0</span>s |
+    💯 Score: <span id="score">0</span> |
+    🥇 High Score: <span id="highscore">0</span> |
+    ❤️ Lives: <span id="lives">3</span>
   </div>
-  <button id="pauseBtn">⏸️ Pause</button>
+  <button id="pauseBtn">⏸ Pause</button>
   <div id="grid"></div>
-  <div id="game-over">
-    <h2>Game Over</h2>
-    <p>⏳ Wait <span id="cooldown">300</span>s or</p>
-    <button onclick="watchAd()">▶️ Watch Ad to Revive</button>
-    <br/><br/>
-    <button onclick="startGame()">🔄 Restart</button>
-  </div>
-  <div id="bottom-ad">
-    <iframe src="https://www.profitableratecpm.com/drmjgriq2?key=f3d635f9a014d5973a07432322c6ea01" width="320" height="50" frameborder="0"></iframe>
+  <div id="gameOver">⛔ Game Over. Cooldown: <span id="cooldown">300</span>s</div>
+  <a id="download" href="./chasing-dot.zip" download>📱 Download Game</a>
+  <div id="ad-box">
+    <iframe src="https://www.profitableratecpm.com/drmjgriq2?key=f3d635f9a014d5973a07432322c6ea01"
+            style="width:100%; height:60px; border:none;" scrolling="no"></iframe>
   </div>
 
   <script>
     const grid = document.getElementById('grid');
     const timeEl = document.getElementById('time');
     const scoreEl = document.getElementById('score');
-    const livesEl = document.getElementById('lives');
     const highscoreEl = document.getElementById('highscore');
-    const gameOver = document.getElementById('game-over');
+    const livesEl = document.getElementById('lives');
+    const gameOver = document.getElementById('gameOver');
     const cooldownEl = document.getElementById('cooldown');
     const pauseBtn = document.getElementById('pauseBtn');
 
-    let score = 0;
-    let highscore = localStorage.getItem('highscore') || 0;
-    let lives = 3;
     let time = 0;
-    let interval, moveSpeed = 1000;
+    let score = 0;
+    let highscore = parseInt(localStorage.getItem('highscore') || '0');
+    let lives = 3;
+    let currentDot = 4;
+    let interval;
+    let moveSpeed = 1000;
     let paused = false;
-    let currentDot = 4; // center
-    let cooldownTimer = null;
+    let cooldownActive = false;
 
     highscoreEl.textContent = highscore;
 
+    // Create Grid
     for (let i = 0; i < 9; i++) {
       const cell = document.createElement('div');
       cell.classList.add('cell');
-      cell.dataset.index = i;
-      cell.onclick = () => handleClick(i);
+      cell.addEventListener('click', () => handleClick(i));
       grid.appendChild(cell);
     }
 
     function placeDot(index) {
-      [...grid.children].forEach(c => c.innerHTML = '');
+      document.querySelectorAll('.cell').forEach(c => c.innerHTML = '');
       const dot = document.createElement('div');
       dot.classList.add('dot');
       grid.children[index].appendChild(dot);
     }
 
     function handleClick(index) {
-  if (paused || lives <= 0 || cooldownActive) return;
-  const cell = grid.children[index];
-  if (index === currentDot) {
-    score++;
-    scoreEl.textContent = score;
-    if (score > highscore) {
-      highscore = score;
-      highscoreEl.textContent = highscore;
-      localStorage.setItem('highscore', highscore);
-    }
-    if (score % 10 === 0) moveSpeed *= 0.9;
-    moveDot();
-  } else {
-    const audio = new Audio('sounds/fail.mp3');
-    audio.play();
-    cell.style.background = '#c0392b';
-    setTimeout(() => cell.style.background = '', 500);
-    lives--;
-    livesEl.textContent = lives;
-    if (lives <= 0) triggerGameOver();
-  }
-}
+      if (paused || lives <= 0 || cooldownActive) return;
+      const cell = grid.children[index];
+      if (index === currentDot) {
+        score++;
+        scoreEl.textContent = score;
+        if (score > highscore) {
+          highscore = score;
+          highscoreEl.textContent = highscore;
+          localStorage.setItem('highscore', highscore);
+        }
         if (score % 10 === 0) moveSpeed *= 0.9;
         moveDot();
       } else {
+        const audio = new Audio('sounds/fail.mp3');
+        audio.play();
+        cell.style.background = '#c0392b';
+        setTimeout(() => cell.style.background = '', 400);
         lives--;
         livesEl.textContent = lives;
         if (lives <= 0) triggerGameOver();
@@ -159,74 +155,62 @@
     }
 
     function moveDot() {
+      const next = Math.floor(Math.random() * 9);
+      currentDot = next;
+      placeDot(currentDot);
       clearInterval(interval);
-      interval = setInterval(() => {
-        if (!paused) {
-          let next;
-          do {
-            next = Math.floor(Math.random() * 9);
-          } while (next === currentDot);
-          currentDot = next;
-          placeDot(currentDot);
-        }
-      }, moveSpeed);
+      interval = setInterval(() => moveDot(), moveSpeed);
     }
 
-    function startGame() {
-  if (cooldownActive) return;
-  score = 0; lives = 3; time = 0; moveSpeed = 1000;
-  scoreEl.textContent = 0;
-  livesEl.textContent = 3;
-  timeEl.textContent = 0;
-  gameOver.style.display = 'none';
-  currentDot = 4;
-  placeDot(currentDot);
-  clearInterval(interval);
-  moveDot();
-  timerStart();
-}
-
-    function timerStart() {
-      clearInterval(cooldownTimer);
+    function startTimer() {
       setInterval(() => {
-        if (!paused && lives > 0) timeEl.textContent = ++time;
+        if (!paused && lives > 0 && !cooldownActive) {
+          time++;
+          timeEl.textContent = time;
+        }
       }, 1000);
     }
 
-    let cooldownActive = false;
+    function triggerGameOver() {
+      clearInterval(interval);
+      gameOver.style.display = 'block';
+      cooldownActive = true;
+      let cooldown = 300;
+      cooldownEl.textContent = cooldown;
+      const timer = setInterval(() => {
+        cooldown--;
+        cooldownEl.textContent = cooldown;
+        if (cooldown <= 0) {
+          clearInterval(timer);
+          cooldownActive = false;
+          resetGame();
+        }
+      }, 1000);
+    }
 
-function triggerGameOver() {
-  clearInterval(interval);
-  gameOver.style.display = 'block';
-  cooldownActive = true;
-  let cooldown = 300;
-  cooldownEl.textContent = cooldown;
-  cooldownTimer = setInterval(() => {
-    cooldown--;
-    cooldownEl.textContent = cooldown;
-    if (cooldown <= 0) {
-      clearInterval(cooldownTimer);
-      cooldownActive = false;
+    function resetGame() {
+      score = 0;
       lives = 3;
-      livesEl.textContent = 3;
+      time = 0;
+      moveSpeed = 1000;
+      scoreEl.textContent = score;
+      livesEl.textContent = lives;
+      timeEl.textContent = time;
       gameOver.style.display = 'none';
-      startGame();
-    }
-  }, 1000);
-}
-      }, 1000);
-    }
-
-    function watchAd() {
-      window.open("https://www.profitableratecpm.com/drmjgriq2?key=f3d635f9a014d5973a07432322c6ea01", '_blank');
-      lives = 1;
-      livesEl.textContent = 1;
-      gameOver.style.display = 'none';
+      currentDot = 4;
+      placeDot(currentDot);
       moveDot();
     }
 
-    pauseBtn.onclick = () => paused = !paused;
-    startGame();
+    pauseBtn.addEventListener('click', () => {
+      paused = !paused;
+      pauseBtn.textContent = paused ? '▶️ Resume' : '⏸ Pause';
+    });
+
+    // Start game
+    placeDot(currentDot);
+    moveDot();
+    startTimer();
   </script>
 </body>
 </html>
